--- a/Android/app/src/main/res/layout/registration_layout.xml
+++ b/Android/app/src/main/res/layout/registration_layout.xml
@@ -90,6 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_text"
+        android:onClick="checkFields"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
