--- a/Android/app/src/main/res/layout/chat_list_layout.xml
+++ b/Android/app/src/main/res/layout/chat_list_layout.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/noUsersFoundText"
+        android:id="@+id/noChatsFoundText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
