Successful test on DAO and mapping from controller to pages.

--- a/JavaWeb/src/main/resources/templates/sign_up.html
+++ b/JavaWeb/src/main/resources/templates/sign_up.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="utf-8">
 		<title>Sign Up</title>
-		<link rel="stylesheet" type="text/css" href="style/theme/index.css"/>
-		<script type="text/javascript" src="js/vue.js"></script>
+		<link rel="stylesheet" type="text/css" th:href="@{/style/theme/index.css}"/>
+		<script type="text/javascript" th:src="@{/js/vue.js}"></script>
 		<!-- import JavaScript -->
 		<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	</head>
