--- a/JavaWeb/src/main/resources/templates/sign_in.html
+++ b/JavaWeb/src/main/resources/templates/sign_in.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="utf-8">
 		<title>Sign in</title>
-		<link rel="stylesheet" type="text/css" href="style/theme/index.css"/>
-		<script type="text/javascript" src="js/vue.js"></script>
+		<link rel="stylesheet" type="text/css" th:href="@{/style/theme/index.css}"/>
+		<script type="text/javascript" th:src="@{/js/vue.js}"></script>
 		<!-- import JavaScript -->
 		<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	</head>
@@ -44,7 +44,7 @@
 				  <!--Todo: sign-in function-->
 			  },
 			  onSignUp() {
-				  window.location.href='./sign_up.html';
+				  window.location.href='sign_up.html';
 			  }
 		  }
 	    })
