--- a/JavaWeb/src/main/resources/templates/sign_in.html
+++ b/JavaWeb/src/main/resources/templates/sign_in.html
@@ -11,16 +11,16 @@
 	<body>
 		<div id="app">
 		    <div v-bind:style='divStyle'>
-		    <el-form label-width="100px" style="margin-top: 80px; margin-left: 20px; margin-right: 30px; margin-bottom: 50px;">
-		      <el-form-item label="User Name">
-		        <el-input v-model="formLabel.name"></el-input>
+		    <el-form th:action="@{/test}" method="post" label-width="100px" style="margin-top: 80px; margin-left: 20px; margin-right: 30px; margin-bottom: 50px;">
+		      <el-form-item label="User Name / Email">
+		        <el-input v-model="formLabel.name" name="identifier"></el-input>
 		      </el-form-item>
 		      <el-form-item label="Password">
-		        <el-input v-model="formLabel.pwd" show-password></el-input>
+		        <el-input v-model="formLabel.pwd" show-password name="pwd"></el-input>
 		      </el-form-item>
 			  <el-form-item style="margin-left: 10px;">
-			    <el-button @click='onSignIn' style="width: 100px; height: 50px;" type='primary'>Sign In</el-button>
-				<el-button @click='onSignUp' style="width: 100px; height: 50px; margin-left: 50px;">Sign Up</el-button>
+			    <el-button style="width: 100px; height: 50px;" type='primary submit'>Sign In</el-button>
+				<el-button th:action="@{/show_sign_up}" style="width: 100px; height: 50px; margin-left: 50px;">Sign Up</el-button>
 			  </el-form-item>
 		    </el-form>
 			</div>
