--- a/JavaWeb/src/main/resources/templates/sign_up.html
+++ b/JavaWeb/src/main/resources/templates/sign_up.html
@@ -9,7 +9,7 @@
 		<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	</head>
 	<body>
-		<div id="app" v-bind:style='divStyle'>
+		<div id="app" :style='divStyle'>
 		<el-form :model="ruleForm" :rules="rules" ref="ruleForm" label-width="150px" class="demo-ruleForm">
 		  <el-form-item label="Email Address" prop="email">
 		    <el-input v-model="ruleForm.email"></el-input>
