--- a/JavaWeb/src/main/resources/templates/sign_up.html
+++ b/JavaWeb/src/main/resources/templates/sign_up.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Sign Up</title>
-		<link rel="stylesheet" type="text/css" th:href="@{/style/theme/index.css}"/>
-		<script type="text/javascript" th:src="@{/js/vue.js}"></script>
+		<link rel="stylesheet" type="text/css" href="/style/theme/index.css"/>
+		<script type="text/javascript" src="/js/vue.js"></script>
+        <script type="text/javascript" src="/js/md5.js"></script>
 		<!-- import JavaScript -->
 		<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	</head>
@@ -21,53 +22,116 @@
 		    <el-input v-model="ruleForm.pwd" show-password></el-input>
 		  </el-form-item>
 		  <el-form-item>
-		    <el-button type="primary" @click="submitForm('ruleForm')">Sign Up</el-button>
+		    <el-button type="primary" @click="submitForm()">Sign Up</el-button>
 		    <el-button @click="resetForm('ruleForm')">Reset</el-button>
 		  </el-form-item>
 		</el-form>
+            <div>{{request}}</div>
+            <div>{{response}}</div>
+            <div>{{parsed_response}}</div>
 		</div>
 	</body>
 	
 	<script>
 	    new Vue({
-	      el: '#app',
-	      data() {
+            el: '#app',
+            data: function() {
 	            return {
-				  divStyle: "position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 500px; height: 300px;",
-	              ruleForm: {
-					email: '',
-	                name: '',
-					pwd: ''
-	              },
-	              rules: {
-					email: [
-					  { required: true, message: 'Please enter your email address.', trigger: 'blur' }
-					],
-	                name: [
-	                  { required: true, message: 'Please enter your user name.', trigger: 'blur' },
-	                  { max: 12, message: 'No more than 12 characters.', trigger: 'blur' }
-	                ],
-	                pwd: [
-	                  { required: true, message: 'Please enter your password.', trigger: 'blur' }
-	                ]
-	              }
+	                websocket: null,
+                    request: "",
+                    response: "",
+                    parsed_response: "",
+                    divStyle: "position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 500px; height: 300px;",
+                    ruleForm: {
+                        email: '',
+                        name: '',
+                        pwd: '',
+                        picture: ''
+                    },
+                    rules: {
+                        email: [
+                          { required: true, message: 'Please enter your email address.', trigger: 'blur' }
+                        ],
+                        name: [
+                          { required: true, message: 'Please enter your user name.', trigger: 'blur' },
+                          { max: 12, message: 'No more than 12 characters.', trigger: 'blur' }
+                        ],
+                        pwd: [
+                          { required: true, message: 'Please enter your password.', trigger: 'blur' }
+                        ]
+                    }
 	            };
-	          },
-	          methods: {
-	            submitForm(formName) {
-	              this.$refs[formName].validate((valid) => {
-	                if (valid) {
-	                  alert('submit!');
-	                } else {
-	                  console.log('error submit!!');
-	                  return false;
-	                }
-	              });
-	            },
-	            resetForm(formName) {
-	              this.$refs[formName].resetFields();
-	            }
-	          }
+            },
+            mounted() {
+                if ('WebSocket' in window) {
+                    this.websocket = new WebSocket('ws://localhost:1234');
+                    this.initWebSocket();
+                } else {
+                    alert('Websocket is not supported by this browser!');
+                    return null;
+                }
+            },
+            beforeDestroy() {
+                this.websocket.close();
+            },
+            methods: {
+                initWebSocket() {
+                    //connection occurs error
+                    this.websocket.onerror = this.setErrorMessage;
+                    //connection succeeds
+                    this.websocket.onopen = this.setOnopenMessage;
+                    //get response from Server
+                    this.websocket.onmessage = this.setOnmessageMessage;
+                    //connection closes
+                    this.websocket.onclose = this.setOncloseMessage;
+                    //connection closes automatically after leaving websites
+                    window.onbeforeunload = this.onBeforeUnload;
+                },
+                setErrorMessage() {
+                    this.response = "WebSocket occurs error." + '   Status：' + this.websocket.readyState;
+                },
+                setOnopenMessage() {
+                    this.response = "WebSocket succeeds." + '   status：' + this.websocket.readyState;
+                },
+                setOnmessageMessage(event) {
+                    this.response = event.data;
+                },
+                setOncloseMessage() {
+                    this.response = "WebSocket closes." + '   status：' + this.websocket.readyState;
+                },
+                onBeforeUnload() {
+                    this.websocket.close();
+                },
+                //send message (JSON) to Server
+                send() {
+                    this.websocket.send(this.request);
+                },
+
+                submitForm() {
+                    if (true) {//Todo: determine if connection is successful
+                        this.request = "{\n" +
+                                            "type: \"REGISTER\",\n" +
+                                            "username:\"" + this.ruleForm.name + "\",\n" +
+                                            "password:\"" + hex_md5(this.ruleForm.pwd) + "\",\n" +
+                                            "email:\"" + this.ruleForm.email + "\",\n" +
+                                            "picture:\"" + this.ruleForm.picture + "\"\n" +
+                                        "}";
+                        this.send();
+                        this.parsed_response = JSON.parse(this.response);
+                        if (this.parsed_response.REPLY === 'REGISTER: SUCCESS') {
+                            alert("Register successfully!");
+                            window.location.href="/sign_in";
+                        } else {
+                            alert("Register failed!")
+                        }
+                    } else {
+                        alert("Error: " + this.response);
+                    }
+                },
+                resetForm(formName) {
+                    this.$refs[formName].resetFields();
+                }
+            }
 	    })
 	</script>
 </html>
