--- a/Android/app/src/main/res/layout/chat_layout.xml
+++ b/Android/app/src/main/res/layout/chat_layout.xml
@@ -17,6 +17,26 @@
         app:layout_constraintRight_toRightOf="parent">
     </android.support.v7.widget.RecyclerView>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_weight="20"
+        android:layout_height="0dp"
+        android:id="@+id/scrollView"
+        app:layout_constraintTop_toBottomOf="@id/recyclerViewMessageList"
+        app:layout_constraintBottom_toTopOf="@id/MsgBoxLayout">
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/linearLayoutSV">
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
+
     <!-- Delimiter between RecyclerView (chat history) and Msg Box -->
     <View
         android:layout_width="0dp"
