--- a/Android/app/src/main/res/layout/new_chat_layout.xml
+++ b/Android/app/src/main/res/layout/new_chat_layout.xml
@@ -8,15 +8,12 @@
     android:layout_height="match_parent"
     tools:context=".NewChat">
 
-    <!-- RecyclerView used to display users from database -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewUsersList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-    </android.support.v7.widget.RecyclerView>
+    <ListView
+        android:id="@+id/displayUsersFoundList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/SearchUsersBox"
+         />
 
     <TextView
         android:id="@+id/searchUsersSuggestiveTextView"
